<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/list_of_students"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".StudentListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/student_list_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/students_txt"
                android:textAlignment="center"
                android:textSize="32sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/list_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_txt" />

    <Button
        android:id="@+id/list_map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_txt" />

</LinearLayout>