<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".CoursesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/abc123_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:text="@string/abc123"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/DepartmentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dept_code_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department_lbl"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <EditText
                    android:id="@+id/dept_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_department_code"
                    android:inputType="text"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/NumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_num_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <EditText
                    android:id="@+id/course_num_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_course_number"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/NameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <EditText
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_course_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/RoomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/room_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <EditText
                    android:id="@+id/room_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_room_building_and_number"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/enter_course_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="32dp"
                android:text="@string/enter_course_btn_lbl" />

            <Button
                android:id="@+id/view_student_list_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="View Student List" />

            <Button
                android:id="@+id/to_map_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:text="@string/go_to_map_btn_lbl" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>